--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>CSS Practice</title>
 </head>
 <body>
-    <div class="wrapper clearFix">
-    <h1>Random Blog Post</h1>
+    <!-- <div class="wrapper clearFix"> -->
+    <!-- <h1>Random Blog Post</h1>
     <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga vel, dolorem obcaecati rem eveniet fugit aut libero maxime 
         placeat est perspiciatis animi distinctio dolorum reprehenderit, et odit ea quia mollitia iusto? Ipsam delectus eos consequuntur. 
@@ -33,12 +33,18 @@
     <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eligendi veritatis quaerat libero consequuntur repellendus vel itaque, impedit nulla id quibusdam earum ullam perspiciatis deleniti velit totam pariatur quo mollitia nihil quod quis vero quae accusamus? Et cupiditate error laborum corporis doloremque vero ducimus nisi beatae nobis! Nisi illo, eum, quo esse autem nam voluptate nobis saepe doloremque, error molestiae ducimus ad quam alias? Neque, est sint. Hic fuga iusto quos quidem, sequi veritatis. Nemo rem saepe eius excepturi, quisquam obcaecati dicta, quae quos ipsa pariatur nisi placeat! Sequi provident quis porro odit aut ipsa, dolor, ducimus, 
         error molestiae iste deserunt!
-    </p>
+    </p> -->
     <!-- <div class="left"></div>
-        <div class="right"></div> -->
+        <div class="right"></div>
 
     </div>
-    <!-- <div style="clear:both"></div> -->
+    <div style="clear:both"></div> -->
+    <!-- </div> -->
+    <div class="container">
+        <div class="box red"></div>
+        <div class="box green"></div>
+        <div class="box blue"></div>
+    </div>
     <div class="footer">This is Footer</div>
 </body>
 </html>
